--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -288,7 +288,7 @@ function primera(){
   $.get("/ajustes", function() {})
       .done(function(out) {
         
-        console.log(out);
+        
         cambiaAjustes (out)
       })
       .fail(function() {
@@ -300,7 +300,7 @@ function primera(){
 
 
 function cambiaAjustes(valores) {
-
+console.log(valores);
 nameD.innerHTML = valores[0] 
 emailR.innerHTML = valores[1] 
 tam.innerHTML = valores[2]  
