--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -301,7 +301,7 @@ function primera(){
 
 function cambiaAjustes(valores) {
 console.log(valores);
-nameD.innerHTML = valores[0] 
+nameD.value = valores[0] 
 emailR.innerHTML = valores[1] 
 tam.innerHTML = valores[2]  
 disB.innerHTML = valores[3]  
