--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -302,15 +302,15 @@ function primera(){
 function cambiaAjustes(valores) {
 console.log(valores);
 nameD.value = valores[0] 
-emailR.innerHTML = valores[1] 
-tam.innerHTML = valores[2]  
-disB.innerHTML = valores[3]  
-disA.innerHTML = valores[4] 
-tem.innerHTML = valores[5] 
-hum.innerHTML = valores[6]  
-disT.innerHTML = valores[7] 
-cpusT.innerHTML = valores[8] 
-humTem.innerHTML = valores[9] 
+emailR.value = valores[1] 
+tam.valueL = valores[2]  
+disB.value = valores[3]  
+disA.value = valores[4] 
+tem.value = valores[5] 
+hum.value = valores[6]  
+disT.value = valores[7] 
+cpusT.value = valores[8] 
+humTem.value = valores[9] 
 }
 
 
