--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -122,19 +122,19 @@
                               <div class="form-group row">
                                   <label for="nameD" class="col-4 col-form-label">Nombre del Dispositivo</label> 
                                   <div class="col-8">
-                                    <input id="nameD" name="nameD" value ="" class="form-control here" required="required" type="text" placeholder="Introduzca nombre del equipo">
+                                    <input id="nameD" name="nameD" value ="{{ session["nameD"] }}" class="form-control here" required="required" type="text" placeholder="Introduzca nombre del equipo">
                                   </div>
                                 </div>
                                 <div class="form-group row">
                                   <label for="emailR" class="col-4 col-form-label">Email de alarmas</label> 
                                   <div class="col-8">
-                                    <input id="emailR" name="emailR" value="" class="form-control here" required="required" type="text" placeholder="Introduzca email de avisos">
+                                    <input id="emailR" name="emailR" value="{{ session["emailA"] }}" class="form-control here" required="required" type="text" placeholder="Introduzca email de avisos">
                                   </div>
                                 </div>
                                 <div class="form-group row">
                                   <label for="tam" class="col-4 col-form-label">Altura del estanque</label> 
                                   <div class="col-8">
-                                    <input id="tam" name="tam" value="" class="form-control here" required="required" type="number" placeholder="Introduzca el tamaño en Cm." min="1"
+                                    <input id="tam" name="tam" value="{{ session["tam"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca el tamaño en Cm." min="1"
                                     step=".01">
                                   </div>
                                 </div>
@@ -145,14 +145,14 @@
                                 <div class="form-group row">
                                   <label for="disB" class="col-4 col-form-label">Nivel mínimo del agua</label> 
                                   <div class="col-8">
-                                    <input id="disB" name="disB" value="" class="form-control here" required="required" type="number" placeholder="Introduzca la distancia en %" min="1" max ="98"
+                                    <input id="disB" name="disB" value="{{ session["disB"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca la distancia en %" min="1" max ="98"
                                     >
                                   </div>
                                 </div>
                               <div class="form-group row">
                                 <label for="disA" class="col-4 col-form-label">Nivel máximo del agua</label> 
                                 <div class="col-8">
-                                  <input id="disA" name="disA" value="" class="form-control here" required="required" type="number" placeholder="Introduzca la distancia en %" min="2" max ="99"
+                                  <input id="disA" name="disA" value="{{ session["disA"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca la distancia en %" min="2" max ="99"
                                   >
                               </div>
                             </div> 
@@ -160,14 +160,14 @@
                               <div class="form-group row">
                                   <label for="tem" class="col-4 col-form-label">Aviso de temperatura</label> 
                                   <div class="col-8">
-                                    <input id="tem" name="tem" value="" class="form-control here" required="required" type="number" placeholder="Introduzca temperatura de aviso en ºC" 
+                                    <input id="tem" name="tem" value="{{ session["tem"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca temperatura de aviso en ºC" 
                                     >
                                 </div>
                               </div> 
                               <div class="form-group row">
                                   <label for="hum" class="col-4 col-form-label">Aviso de humedad</label> 
                                   <div class="col-8">
-                                    <input id="hum" name="hum" value="" class="form-control here" required="required" type="number" placeholder="Introduzca temperatura de aviso en %" min="1" max="99"
+                                    <input id="hum" name="hum" value="{{ session["hum"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca temperatura de aviso en %" min="1" max="99"
                                     >
                                 </div>
                               </div>
@@ -178,21 +178,21 @@
                             <div class="form-group row">
                               <label for="humTem" class="col-4 col-form-label">Humedad y Temperatura</label> 
                               <div class="col-8">
-                                <input id="humTem" name="humTem" value="" class="form-control here" required="required" type="number" placeholder="Introduzca intervalo de toma de muestras en segundos" min="1"
+                                <input id="humTem" name="humTem" value="{{ session["humTem"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca intervalo de toma de muestras en segundos" min="1"
                                 >
                               </div>
                             </div>
                             <div class="form-group row">
                               <label for="disT" class="col-4 col-form-label">Nivel del agua</label> 
                               <div class="col-8">
-                                <input id="disT" name="disT" value="" class="form-control here" required="required" type="number" placeholder="Introduzca intervalo de toma de muestras en segundos" min="1"
+                                <input id="disT" name="disT" value="{{ session["disT"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca intervalo de toma de muestras en segundos" min="1"
                                 >
                               </div>
                             </div>
                             <div class="form-group row">
                               <label for="cpusT" class="col-4 col-form-label">Uso y temperatura interna de la de CPU</label> 
                               <div class="col-8">
-                                <input id="cpusT" name="cpusT" value="" class="form-control here" required="required" type="number" placeholder="Introduzca intervalo de toma de muestras en segundos" min="1"
+                                <input id="cpusT" name="cpusT" value="{{ session["cpusT"] }}" class="form-control here" required="required" type="number" placeholder="Introduzca intervalo de toma de muestras en segundos" min="1"
                                 >
                               </div>
                             </div>
@@ -240,16 +240,6 @@
               </div>
 
               {% include "salidas.html" %}
-              <div class="progress">
-                  <div
-                    class="progress-bar bg-success progress-bar-striped progress-bar-animated"
-                    role="progressbar"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width:1%"
-                    id="asignaBar"
-                  ></div>
-                </div>
               <div class="form-group row">
                   <div class="offset-4 col-8">
                     <button type="button" class="btn-success"id="asigBTN" >
@@ -265,68 +255,23 @@
 		    </div>
 		</div>
 	</div>
-</div> 
-                              
+</div>
+                                                      
 {% include "reboot.html" %}
 {% endblock %}
 {% block script %}
 
-
 <script>
-  $(document).ready(primera);
-var nameD = document.getElementById("nameD"); 
-var emailR = document.getElementById("emailR"); 
-var tam = document.getElementById("tam"); 
-var disB = document.getElementById("disB"); 
-var disA = document.getElementById("disA"); 
-var tem = document.getElementById("tem"); 
-var hum = document.getElementById("hum"); 
-var disT = document.getElementById("disT"); 
-var cpusT = document.getElementById("cpusT"); 
-var humTem = document.getElementById("humTem"); 
-function primera(){
-  $.get("/ajustes", function() {})
-      .done(function(out) {
-        
-        
-        cambiaAjustes (out)
-      })
-      .fail(function() {
-        var t = setTimeout(startTime, 100);
-        console.log("fail ajustes");
-      });
-
-}
-
-
-function cambiaAjustes(valores) {
-console.log(valores);
-nameD.value = valores[0] 
-emailR.value = valores[1] 
-tam.valueL = valores[2]  
-disB.value = valores[3]  
-disA.value = valores[4] 
-tem.value = valores[5] 
-hum.value = valores[6]  
-disT.value = valores[7] 
-cpusT.value = valores[8] 
-humTem.value = valores[9] 
-}
-
-
-</script>
-
-<script>
-var barra1 = document.getElementById("myBar"); 
-boton1 = document.getElementById("rebootBTN");                      
+var barra = document.getElementById("myBar"); 
+boton = document.getElementById("rebootBTN");                      
 cerrar = document.getElementById("cerrar");                      
-barra1.style.display = "none";
+barra.style.display = "none";
 var barra2 = document.getElementById("myBar2"); 
 boton2 = document.getElementById("updateBTN");                      
 cerrar2 = document.getElementById("cerrar2");                      
 barra2.style.display = "none";
 
-boton1.addEventListener("click", reinicio);
+boton.addEventListener("click", reinicio);
 boton2.addEventListener("click", actualizacion);
 
 function actualizacion() {
@@ -340,7 +285,6 @@ function actualizacion() {
         
         console.log("fail actualiza");
       });
-      
       move(barra2, 15);
     //document.getElementById("Cerrar").click();
   }
@@ -357,8 +301,7 @@ function reinicio() {
         
         console.log("fail reinicio");
       });
-      
-      move(barra1, 35);
+      move(barra, 35);
     //document.getElementById("Cerrar").click();
   }
 
@@ -384,7 +327,7 @@ function myFunction() {
 
 function move(theBarra, tiempo) {
   theBarra.style.display = "block";
-  boton1.disabled=true;
+  boton.disabled=true;
   cerrar.disabled=true;
   boton2.disabled=true;
   cerrar2.disabled=true;
@@ -404,37 +347,25 @@ function move(theBarra, tiempo) {
   
 }
 </script>
-<script>
-  
-    var botonA = document.getElementById("asigBTN");
-    botonA.addEventListener("click", asignacion);
-    var result = [];
-    var barra3 = document.getElementById("asignaBar"); 
-    barra3.style.display = "none";
-    var tapV18 = document.getElementById("tapName18");
-    var nombre18 = document.getElementById("Nombre18");
-    var selected18; 
-    var tapV23 = document.getElementById("tapName23");
-    var nombre23 = document.getElementById("Nombre23");
-    var selected23; 
-    var tapV24 = document.getElementById("tapName24");
-    var nombre24 = document.getElementById("Nombre24");
-    var selected24; 
-    var running;
-    
 
-    function asignacion(){
+<script>
+  var boton = document.getElementById("asigBTN");
+  boton.addEventListener("click", asignacion);
+  var result = [];
+  {% for tap in taps %}
+  var tapV{{tap.2}} = document.getElementById("tapName{{tap.2}}");
+  var selected{{tap.2}};
+  {% endfor %}
+
+  
+  function asignacion(){
     {% for tap in taps %}
     selected{{tap.2}} = tapV{{tap.2}}.options[tapV{{tap.2}}.selectedIndex];
     result.push({{tap.2}});
     result.push (selected{{tap.2}}.value );
-    
-    {% endfor %}
     console.log (result)
+    {% endfor %}
 
-    
-    barra(barra3, 3)
-    running = true;
     $.post("/asigna", {
       data: result,
     }).done(function(reply) {
@@ -443,42 +374,12 @@ function move(theBarra, tiempo) {
   }
 
   function toDo(algo){
-    running = false;
-    alert(algo.msj)
-    botonA.disabled=false;
-    barra3.style.width = 0 + '%'; 
-    barra3.innerHTML = 0 * 1  + '%';
-    barra3.style.display = "none";
-    nombre18.innerHTML = algo.tap[0];
-    nombre23.innerHTML = algo.tap[1];
-    nombre24.innerHTML = algo.tap[2];
-    result = [];
-  }
-
-  function barra(theBarra, tiempo) {
-  theBarra.style.display = "block";
-  botonA.disabled=true;
-  var final = tiempo * 10
-  var width = 1;
-  var id = setInterval(frame, final);
-  function frame() {
-    if (width >= 100){
-      clearInterval(id);
-    }else{
-      if (running){
-        width++; 
-        theBarra.style.width = width + '%'; 
-        theBarra.innerHTML = width * 1  + '%';
-      } else { 
-        clearInterval(id);
-      }
+    alert(algo.mensaje)
+    if (algo.result == 1){
+      console.log("Cambiar los valores de la tabla y limpiar el array")
+      result = [];
     }
-    
-
   }
-  
-}
-
 </script>
 
 
