--- a/templates/salidas.html
+++ b/templates/salidas.html
@@ -4,24 +4,25 @@
       <table class="table table-bordered table-striped bg-white table-sm">
         <thead>
           <tr>
-            <td><strong>Nombre</strong></td>
-            <td><strong>Usuario asignado</strong></td>
-            <td><strong>Salida</strong></td>
-            <td><strong>Nueva asignación</strong></td>
+            <td>Nombre</td>
+            <td>Usuario asignado</td>
+            <td>Salida</td>
+            <td>Nueva asignación</td>
           </tr>
         </thead>
         <tbody>
+          {% for tap in taps %}
           <tr>
-            <td class="bg-{{taps.0.3}}">
-              <strong>{{taps.0.0}}</strong>
-            </td>
+            <td>{{tap.0}}</td>
 
             <td>
-              <strong id="Nombre18">{{taps.0.1}}</strong>
+              {% for contact in contactos %} {%if tap.1 == contact.0 %}
+              {{contact.1}}
+              {% endif %} {% endfor %}
             </td>
-            <td>{{taps.0.2}}</td>
+            <td>{{tap.2}}</td>
             <td>
-              <select id="tapName18">
+              <select id="tapName{{tap.2}}">
                 <option value="" selected hidden>Nuevo usuario</option>
                 <option value="0">Ninguno</option>
                 {% for contact in contactos %}
@@ -30,46 +31,7 @@
               </select>
             </td>
           </tr>
-          <tr>
-            <td class="bg-{{taps.1.3}}">
-              <strong>{{taps.1.0}}</strong>
-            </td>
-
-            <td>
-              <strong id="Nombre23">{{taps.1.1}}</strong>
-            </td>
-
-            <td>{{taps.1.2}}</td>
-            <td>
-              <select id="tapName23">
-                <option value="" selected hidden>Nuevo usuario</option>
-                <option value="0">Ninguno</option>
-                {% for contact in contactos %}
-                <option value="{{contact.0}}">{{contact.1}}</option>
-                {% endfor %}
-              </select>
-            </td>
-          </tr>
-          <tr>
-            <td class="bg-{{taps.2.3}}">
-              <strong>{{taps.2.0}}</strong>
-            </td>
-
-            <td>
-              <strong id="Nombre24">{{taps.2.1}}</strong>
-            </td>
-
-            <td>{{taps.2.2}}</td>
-            <td>
-              <select id="tapName24">
-                <option value="" selected hidden>Nuevo usuario</option>
-                <option value="0">Ninguno</option>
-                {% for contact in contactos %}
-                <option value="{{contact.0}}">{{contact.1}}</option>
-                {% endfor %}
-              </select>
-            </td>
-          </tr>
+          {% endfor %}
         </tbody>
       </table>
     </div>
