--- a/templates/modales.html
+++ b/templates/modales.html
@@ -91,7 +91,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+        <button type="button" id="masivoCerrar"class="btn btn-secondary" data-dismiss="modal">
           Cancelar
         </button>
         <button type="button" id="borradoBTN" class="btn btn-danger">
@@ -127,7 +127,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+        <button type="button" id="modalClose"class="btn btn-secondary" data-dismiss="modal">
           Cerrar
         </button>
         <button type="button" id="btnBorrar" class="btn btn-danger">
